<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/button">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/main"
        android:drawableBottom="@mipmap/ic_launcher_round"
        android:textSize="30sp"
        android:drawablePadding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20dp"
        android:id="@+id/name"
        android:layout_below="@id/main"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/editview"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textSize="20dp"
        android:layout_below="@id/name"
        android:hint="@string/address"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@drawable/editview"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:textSize="20dp"
        android:layout_below="@id/address"
        android:hint="@string/contact"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@drawable/editview"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textSize="20dp"
        android:layout_below="@id/contact"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@drawable/editview"/>

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4FEA55"
        android:paddingLeft="15dp"
        android:layout_centerHorizontal="true"
        android:paddingRight="15dp"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="15dp" />

</RelativeLayout>